js-i2b2/cells/CRC/assets/QueryHistory.css
#i2b2TreeviewQueryHistory, #i2b2TreeviewQueryHistoryFinder, #i2b2QueryHistoryFinderStatus, #i2b2QueryHistoryFinderMessage {
    background: #FFFFFF;
    border: solid 1px rgba(99, 117, 140, 0.28);
    border-top: none;
    overflow: auto;
    border-radius: 0 0 3px 3px;
    flex-direction: column;
    position: absolute;
    bottom: 0;
    top: 3.5em;
    left: 0;
    right: 0;
    height: auto;
}

#i2b2QueryHistoryBar .dateSearchBtn {
    position:absolute;
    top: 0.15rem;
    right: 6rem;
    padding: 0.5rem;
    cursor: pointer;
    font-size: 1.4em !important;
    z-index: 1000;
}


#i2b2TreeviewQueryHistory .history-container {
    position: absolute;
}

#i2b2TreeviewQueryHistory .history-tv {
    overflow: visible;
}

#i2b2TreeviewQueryHistory .history-more-bar {
    margin-left: 1.55rem;
    margin-top: 0.2rem;
    color: var(--bs-blue);
    cursor: pointer;
    display: inline-block;
    font-size: 1rem;
}
#i2b2TreeviewQueryHistory .history-more-bar:hover {
    text-decoration: underline;
}
#i2b2TreeviewQueryHistory .history-more-bar i.bi {
    color: #000;
    animation: spin-animation 1s infinite;
    display: inline-block;
}
@keyframes spin-animation {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(359deg);
    }
}


#i2b2QueryHistoryFinderMessage{
    padding-top: 0.6em;
    padding-left: 0.9em;
}

#i2b2QueryHistoryFinderStatus {
    display: flex;
    justify-content: center;
    align-items: center;
}

#i2b2QueryHistoryBar {
    position: absolute;
    top: 0;
    height: 3.1rem;
    border: solid 1px rgba(99, 117, 140, 0.28);
    border-bottom: 0;
    border-top: none;
    width: 100%;
    padding: 0.3em 0.3em 1.2em 1.3em;
    background: rgba(234, 236, 236, 0.3);
    font-size: 0.98em;
    overflow: clip;
}

#i2b2QueryHistoryBar .searchOptions {
    position: relative;
    align-items: center;
    display: flex;
    height: 100%;
    min-width: 20rem;
}

#i2b2QueryHistoryBar .searchTermMain{
     flex-grow: 1;
     min-width: 6.5rem;
     margin-top: -0.1em;
}

#i2b2QueryHistoryBar #querySearchTermText{
    flex-grow: 1;
    min-width: 6.5rem;
    margin-top: 0.9em;
    opacity: 0.65;
    border-color: #474849 !important;
    border-width: 0.11em !important;
    padding-bottom: 0;
}

#i2b2QueryHistoryBar #submitQueryHistorySearch{
    margin-left: -0.2em;
}

#i2b2QueryHistoryBar #querySearchFilter{
    padding: 0 0.7rem;
    margin-bottom: -10px;
}

#i2b2QueryHistoryBar #querySearchFilterText {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    vertical-align: middle;
    display: inline-block;
    width: 80px;
}


#i2b2QueryHistoryBar .form-control{
    border-radius: 0;
    box-shadow: none;
    background: transparent;
}

button.invert{
    color: #0d6efd;
    background: #FFFFFF;
}

button.invert:hover{
    opacity: 0.7;
}

.hidden{
    display: none;
}

#i2b2QueryHistoryBar .form-select-sm{
    font-size: 0.84em;
}

#i2b2QueryHistoryBar .btn-sm{
    font-size: 0.89em;
}

#i2b2QueryHistoryBar .form-control-sm{
    font-size: 1em;
    padding-left: 0.1em;
}

#i2b2QueryHistoryBar .form-check-input {
    border: 1px solid black;
    margin-top: 2px;
}

#i2b2QueryHistoryBar .form-check-inline {
    margin-top: 5px;
}

#i2b2QueryHistoryBar .navbar-nav{
    border: 1px solid #ced4da;
    border-radius: 5px 5px 5px 5px;
    font-size: 0.9em;
    background-color: #FFFFFF;
}

#i2b2QueryHistoryBar .nav-link{
    color: #212529;
    margin-right: 0.2em;
}

#i2b2QueryHistoryBar .dropdown-menu{
    font-size: 1em;
    position: fixed !important;
}

#i2b2FinderOnt .submenu{
    max-height: 18em;
    overflow-y: auto;
}

#i2b2QueryHistoryBar .search{
    margin-right: 0.5em;
}

@media all and (min-width: 992px) {
    .dropdown-menu li {
        position: relative;
    }
    .nav-item .submenu {
        display: none;
        position: absolute;
        top: -0.2em;
        padding-right: 0.2em;
    }
    .nav-item .submenu-left {
        right: 100%;
        left: auto;
    }
    .dropdown-menu > li:hover {
        background-color: #f1f1f1
    }
}
/* ============ desktop view .end// ============ */

/* ============ small devices ============ */
@media (max-width: 991px) {
    .dropdown-menu .dropdown-menu{
        margin-left:0.7rem;
        margin-right:0.7rem;
        margin-bottom: .5rem;
    }
}
/* ============ small devices .end// ============ */

#i2b2QueryHistoryBar .highlight-menu-item {
    background-color: #f1f1f1;
}

#i2b2QueryHistoryBar .centerText{
    text-align: center;
}

#searchTermError{
    color: red;
    font-size: 0.85em;
    width: 22.4em;
}

#i2b2QueryHistoryBar .searchBtn{
    font-size: 1.4em !important;
    margin-left: 0;
    border-radius: 3px;
    border-width: 0.10em !important;
}

#i2b2QueryHistoryBar .searchBtn:hover:enabled{
    background-color: #6c757d;
    border-color: #797a7c !important;
}

#i2b2QueryHistoryBar .searchBtn:enabled{
    opacity: 0.65;
}

#i2b2QueryHistoryBar .searchActions {
    border-color: #797a7c !important;
}

#i2b2QueryHistoryBar .searchActions .btn {
    padding: 0.05em 0.55em;
    margin-top: 0.7em;
}

#i2b2QueryHistoryBar .searchActions .btn:hover {
    padding: 0.05em 0.55em;
    margin-top: 0.7em;
}

#i2b2QueryHistoryBar .clearIcon {
    margin-right: 0;
    margin-left: 0;
    border-color: #797a7c !important;
}

#i2b2QueryHistoryBar .invisible {
    visibility: hidden;
}

#i2b2QueryHistoryBar .searchTermMain .input-group{
    border-color: rgba(71, 72, 73, 0.63);
    border-style: solid;
    border-width: 0 0 2px 0 !important;
}

#queryHistoryOptionsFields .form-check-label{
    margin-top: 0.15em;
}

#queryHistoryOptionsFields #HISTMaxQryDisp-error {
    font-size: 0.9em;
    color: red;
}


/* date listing bar */
#i2b2QueryHistoryBar .dateListing .text {
    margin: auto;
    padding-left: 0;
}

#i2b2QueryHistoryBar .dateListing .dateError {
    text-align: center;
    color: red;
}

#i2b2QueryHistoryBar .dateListing .input-group-append .button {
    border-radius: 0;
}

#i2b2QueryHistoryBar .dateListing .input-group-append .dateListingCancel {
    position: relative;
    left: -1px;
    border-bottom-right-radius: 0.25rem;
    border-top-right-radius: 0.25rem;
}

